Lexer: ex1 test passing
Tokens from ex1 are lexed correctly. Need to handle \x64 and token
types.

Signed-off-by: Darko Janekovic <darko.janekovic@fer.hr>

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,10 @@ all: xic
 xic: $(OBJ)
 	$(CXX) $(CXXFLAGS) -o $@ $(OBJ) $(LDFLAGS)
 
-.PHONY: xi++
+.PHONY: ley.yy.cc
+
+lex.yy.cc: xi++-scanner.ll
+	flex -c++ -d $^
 
 clean:
 	rm -f $(OBJ)
