lint with clang-tidy
Signed-off-by: Darko Janekovic <darko.janekovic@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(xic)
 
-add_compile_options(-g -Wall -Werror -Wextra -fno-exceptions -fno-rtti -std=c++17)
+add_compile_options(-g -Wall -Werror -Wextra -fno-exceptions -fno-rtti -Wno-missing-field-initializers -std=c++17)
 
 include_directories(include)
 file(GLOB src_files src/*.cpp)
