--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: cpp
 dist: bionic
 before_install:
-    - mkdir build && cd build && cmake .. && make && cd -
+    - wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+    - echo "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main" | sudo tee -a /etc/apt/sources.list
+    - sudo apt-get -qq update && sudo apt-get -y install clang-10 clang-tidy-10
+install:
+    - mkdir build && cd build
+    - cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_CXX_COMPILER=clang++-10 ..
+    - make && cd -
 script:
     - python3 ./scripts/run_tests.py
+    - clang-tidy-10 src/*  -- -Iinclude/ -std=c++17 build/compile_commands.json
